apps/test/base/app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
---
apiVersion: v1
kind: Pod
metadata:
  name: hello-world-pod
  labels:
    app: hello-world
spec:
  containers:
    - name: hello-world-container
      image: crccheck/hello-world
      ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: hello.traefik.tuntelder.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 80
  tls:
    - hosts:
        - hello.traefik.tuntelder.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello2-world-ingress
spec:
  ingressClassName: nginx
  rules:
    # Update host with your domain name
    - host: hello2.kube.tuntelder.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 80
  # Optionally configure TLS
  tls:
    - hosts:
      - hello2.kube.tuntelder.com
      secretName: tls-kube-tuntelder-com
